{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 31,
  "lineage": "c76a4da1-fcb5-a35d-a49b-f6121cfecb11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:234761988130:instance/i-0ed3ab86cb3cda19e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed3ab86cb3cda19e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096b6d931c46f13bf",
            "private_dns": "ip-10-0-1-172.ec2.internal",
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-54-159-70-209.compute-1.amazonaws.com",
            "public_ip": "54.159.70.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a601fa6d4e6aa1c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b556b837be81a632",
            "tags": {
              "Name": "jenkins_master_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-020845fb834f4d462"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_security_group.jenkins-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "each": "list",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a36eb8fadc976275",
            "arn": "arn:aws:ec2:us-west-2:234761988130:instance/i-0861bf9359c0a46b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0861bf9359c0a46b7",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ea60b0d1a17ad1c",
            "private_dns": "ip-192-168-1-125.us-west-2.compute.internal",
            "private_ip": "192.168.1.125",
            "public_dns": "ec2-52-12-149-118.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.149.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e51431f1e7d31664",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f737588a26211211",
            "tags": {
              "Name": "jenkins_worker_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2f835d573e74410"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_internet_gateway.igw-oregon",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_main_route_table_association.set-worker-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_route_table.internet_route_oregon",
            "aws_security_group.jenkins-sg",
            "aws_security_group.jenkins-sg-oregon",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_1_oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a36eb8fadc976275",
            "arn": "arn:aws:ec2:us-west-2:234761988130:instance/i-0c3cec40d726f1fdc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3cec40d726f1fdc",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018c618259d5d37d6",
            "private_dns": "ip-192-168-1-135.us-west-2.compute.internal",
            "private_ip": "192.168.1.135",
            "public_dns": "ec2-52-12-246-193.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.246.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045ea6da93bed5eaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f737588a26211211",
            "tags": {
              "Name": "jenkins_worker_tf_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2f835d573e74410"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-worker-default-rt-assoc",
            "aws_security_group.jenkins-sg-oregon",
            "aws_subnet.subnet_1_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:internet-gateway/igw-04101d043cf1e63a9",
            "id": "igw-04101d043cf1e63a9",
            "owner_id": "234761988130",
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234761988130:internet-gateway/igw-049805af26b779a08",
            "id": "igw-049805af26b779a08",
            "owner_id": "234761988130",
            "vpc_id": "vpc-0275aa5dc7c36d146"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:loadbalancer/app/jenkins-lb/6e42b723bfbd09d7",
            "arn_suffix": "app/jenkins-lb/6e42b723bfbd09d7",
            "dns_name": "jenkins-lb-958010371.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:234761988130:loadbalancer/app/jenkins-lb/6e42b723bfbd09d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-lb",
            "security_groups": [
              "sg-044897d825d445d24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f9e9721e49ced87"
              },
              {
                "subnet_id": "subnet-0b556b837be81a632"
              }
            ],
            "subnets": [
              "subnet-05f9e9721e49ced87",
              "subnet-0b556b837be81a632"
            ],
            "tags": {
              "Name": "Jenkins-LB"
            },
            "vpc_id": "vpc-02cafe973e469bc47",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-listener-http",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:listener/app/jenkins-lb/6e42b723bfbd09d7/a74dd1a22fea9797",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:targetgroup/app-lb-tg/2f8d44cf2abab9f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:234761988130:listener/app/jenkins-lb/6e42b723bfbd09d7/a74dd1a22fea9797",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:loadbalancer/app/jenkins-lb/6e42b723bfbd09d7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.app-lb-tg",
            "aws_security_group.jenkins-sg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:targetgroup/app-lb-tg/2f8d44cf2abab9f6",
            "arn_suffix": "targetgroup/app-lb-tg/2f8d44cf2abab9f6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:234761988130:targetgroup/app-lb-tg/2f8d44cf2abab9f6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins-master-attach",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:234761988130:targetgroup/app-lb-tg/2f8d44cf2abab9f6-20210111024956053200000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:234761988130:targetgroup/app-lb-tg/2f8d44cf2abab9f6",
            "target_id": "i-0ed3ab86cb3cda19e"
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_lb_target_group.app-lb-tg",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_route_table.internet_route",
            "aws_security_group.jenkins-sg",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-rt-assoc",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018310c968f3e00a9",
            "original_route_table_id": "rtb-01652ec4896558de8",
            "route_table_id": "rtb-043395950286d538c",
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-worker-default-rt-assoc",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0059be3933631d375",
            "original_route_table_id": "rtb-032dad4322f433d1e",
            "route_table_id": "rtb-091c65d57ff3e5e64",
            "vpc_id": "vpc-0275aa5dc7c36d146"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-043395950286d538c",
            "owner_id": "234761988130",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04101d043cf1e63a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00277076c3e46d033"
              }
            ],
            "tags": {
              "Name": "Master-Region-RT"
            },
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091c65d57ff3e5e64",
            "owner_id": "234761988130",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049805af26b779a08",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00277076c3e46d033"
              }
            ],
            "tags": {
              "Name": "Worker-Region-RT"
            },
            "vpc_id": "vpc-0275aa5dc7c36d146"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_association",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03632d86c409d50e2",
            "route_table_id": "rtb-043395950286d538c",
            "subnet_id": "subnet-0b556b837be81a632"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_association_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc29cc5b8a981cb",
            "route_table_id": "rtb-091c65d57ff3e5e64",
            "subnet_id": "subnet-0f737588a26211211"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_subnet.subnet_1_oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:security-group/sg-020845fb834f4d462",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020845fb834f4d462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "allow traffic from us-west-2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "234761988130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234761988130:security-group/sg-0a2f835d573e74410",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f835d573e74410",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow traffic from us-east-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "234761988130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0275aa5dc7c36d146"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:security-group/sg-044897d825d445d24",
            "description": "Allow 443 and traffic to Jenkins SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044897d825d445d24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 from anywhere for redirection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic to jenkins-sg",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020845fb834f4d462"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "234761988130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:subnet/subnet-0b556b837be81a632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b556b837be81a632",
            "map_public_ip_on_launch": false,
            "owner_id": "234761988130",
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234761988130:subnet/subnet-0f737588a26211211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f737588a26211211",
            "map_public_ip_on_launch": false,
            "owner_id": "234761988130",
            "vpc_id": "vpc-0275aa5dc7c36d146"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:subnet/subnet-05f9e9721e49ced87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05f9e9721e49ced87",
            "map_public_ip_on_launch": false,
            "owner_id": "234761988130",
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_useast",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234761988130:vpc/vpc-02cafe973e469bc47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07987dc865ba90865",
            "default_route_table_id": "rtb-043395950286d538c",
            "default_security_group_id": "sg-0598f3af86aa17000",
            "dhcp_options_id": "dopt-059a78cec9a68a6ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02cafe973e469bc47",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043395950286d538c",
            "owner_id": "234761988130",
            "tags": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_uswest",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234761988130:vpc/vpc-0275aa5dc7c36d146",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05b62570a78c8ce99",
            "default_route_table_id": "rtb-091c65d57ff3e5e64",
            "default_security_group_id": "sg-0c5a577b8de3f464f",
            "dhcp_options_id": "dopt-0e12253a113459f50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0275aa5dc7c36d146",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091c65d57ff3e5e64",
            "owner_id": "234761988130",
            "tags": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1-uswest-2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-00277076c3e46d033",
            "peer_owner_id": "234761988130",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0275aa5dc7c36d146",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-02cafe973e469bc47"
          },
          "dependencies": [
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept_peering",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00277076c3e46d033",
            "peer_owner_id": "234761988130",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0275aa5dc7c36d146",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-02cafe973e469bc47",
            "vpc_peering_connection_id": "pcx-00277076c3e46d033"
          },
          "dependencies": [
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    }
  ]
}